--- a/dashboard.html
+++ b/dashboard.html
@@ -411,7 +411,7 @@
 
   <script>
     
-    let isSidebarCollapsed = false;
+    // isSidebarCollapsed sidebar.js'den geliyor
     let currentUser = null;
     let allCalculations = [];
     let userFavorites = [];
