--- a/projelerim.html
+++ b/projelerim.html
@@ -383,7 +383,7 @@
     let allProjects = [];
     let projectToDeleteId = null;
     let reminderProjectId = null;
-    let isSidebarCollapsed = false;
+    // isSidebarCollapsed sidebar.js'den geliyor
     let currentUser = null; 
 
     // Hesaplama tipine göre doğru araç URL'sini döndür
