--- a/teklif-olustur.html
+++ b/teklif-olustur.html
@@ -432,7 +432,7 @@
   </div>
 
   <script>
-    let currentUser=null,isSidebarCollapsed=false,allClients=[],allTemplates=[],productRowId=0;
+    let currentUser=null,allClients=[],allTemplates=[],productRowId=0;
 
     // === UTILITY ===
     function escapeHtml(t){if(!t)return'';return t.replace(/&/g,"&amp;").replace(/</g,"&lt;").replace(/>/g,"&gt;").replace(/"/g,"&quot;")}
