--- a/musteri-ekle.html
+++ b/musteri-ekle.html
@@ -207,7 +207,7 @@
   </div>
 
   <script>
-    let currentUser=null,isSidebarCollapsed=false,editingClientId=null,addOptionTarget=null;
+    let currentUser=null,editingClientId=null,addOptionTarget=null;
 
     function escapeHtml(t){if(!t)return'';return t.replace(/&/g,"&amp;").replace(/</g,"&lt;").replace(/>/g,"&gt;").replace(/"/g,"&quot;")}
     // toggleSidebar from sidebar.js
