--- a/teklif-yonetimi.html
+++ b/teklif-yonetimi.html
@@ -327,7 +327,7 @@
   </div>
 
   <script>
-    let currentUser=null,isSidebarCollapsed=false,allClients=[],allProposals=[],allTemplates=[];
+    let currentUser=null,allClients=[],allProposals=[],allTemplates=[];
     let editingClientId=null,proposalItemCounter=0,quickItemCounter=0,templateItemCounter=0;
     const CLIENTS_TABLE='clients',PROPOSALS_TABLE='proposals',TEMPLATES_TABLE='proposal_templates';
 
