--- a/tool/anlik-kayip.html
+++ b/tool/anlik-kayip.html
@@ -1568,9 +1568,7 @@
         });
         
         try {
-            const { data, error } = await activeSupabase
-                .from('calculations')
-                .insert({
+            const calcData = {
                     user_id: session.user.id,
                     project_name: document.getElementById('pName').value || "İsimsiz Proje",
                     client_name: document.getElementById('cName').value || "",
@@ -1591,15 +1589,26 @@
                     boiler_efficiency: parseFloat(document.getElementById('eff').value),
                     energy_price: parseFloat(document.getElementById('price').value),
                     annual_hours: parseInt(document.getElementById('hours').value)
-                })
-                .select();
+            };
+
+            let data, error;
+            if (window.loadedCalcId) {
+                ({ data, error } = await activeSupabase.from('calculations').update(calcData).eq('id', window.loadedCalcId).select());
+            } else {
+                ({ data, error } = await activeSupabase.from('calculations').insert(calcData).select());
+            }
             
             if(error) {
                 console.error('Kayıt hatası:', error);
                 customAlert('Kaydetme sırasında hata oluştu: ' + error.message, 'Hata');
             } else {
+                const isUpdate = !!window.loadedCalcId;
                 const saveName = document.getElementById('cName').value || document.getElementById('pName').value || 'Proje';
-                customAlert(`"${saveName}" başarıyla veritabanına kaydedildi! Dashboard'dan görüntüleyebilirsiniz.`, 'Başarılı 🎉');
+                if (!isUpdate && data && data[0]) {
+                    window.loadedCalcId = data[0].id;
+                    window.history.replaceState({}, '', window.location.pathname + '?load_id=' + data[0].id);
+                }
+                customAlert(`"${saveName}" ${isUpdate ? 'güncellendi' : 'kaydedildi'}! Dashboard'dan görüntüleyebilirsiniz.`, 'Başarılı 🎉');
             }
         } catch(err) {
             console.error('Beklenmeyen hata:', err);
@@ -1611,6 +1620,7 @@
     window.addEventListener('DOMContentLoaded', async () => {
         const urlParams = new URLSearchParams(window.location.search);
         const loadId = urlParams.get('load_id');
+        window.loadedCalcId = loadId || null;
         if (!loadId) return;
 
         console.log('Anlık Kayıp proje yükleniyor ID:', loadId);
@@ -1652,5 +1662,3 @@
 </script>
 </body>
 </html>
-
-
