--- a/tool/roi-yedek.html
+++ b/tool/roi-yedek.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Endüstriyel İzolasyon Yatırımı Amortisman Hesaplama (YEDEK)</title>
+<title>Endüstriyel İzolasyon Yatırımı Amortisman Hesaplama</title>
   <style>
   /* Auth kontrolü yapılana kadar sayfa gizli */
   body:not(.auth-checked) {
@@ -237,7 +237,7 @@
     <nav class="sticky top-0 z-50 glass-card !bg-white dark:bg-slate-800/50/90 dark:!bg-slate-900/40 !border-x-0 !border-t-0 !rounded-none border-b border-slate-200 dark:border-slate-700/50 backdrop-blur-xl">
       <div class="app-container px-6 h-16 flex items-center justify-between">
           <a href="../dashboard.html" class="flex items-center gap-3 group">
-              <div><h1 class="text-lg font-bold text-slate-800 dark:text-slate-100 tracking-wide">Optimizi<span class="text-transparent bg-clip-text bg-gradient-to-r from-indigo-500 to-orange-500">.Roi</span> <span class="text-[10px] bg-red-500 text-white px-2 py-0.5 rounded ml-2">YEDEK</span></h1></div>
+              <div><h1 class="text-lg font-bold text-slate-800 dark:text-slate-100 tracking-wide">Optimizi<span class="text-transparent bg-clip-text bg-gradient-to-r from-indigo-500 to-orange-500">.Roi</span></h1></div>
           </a>
           <div class="flex items-center gap-3">
               <div class="hidden md:flex items-center gap-2 px-3 py-1.5 rounded-full bg-slate-100 dark:bg-slate-800/50 border border-slate-200 dark:border-slate-700 text-xs text-slate-500 dark:text-slate-400">
