--- a/projelerim.html
+++ b/projelerim.html
@@ -748,8 +748,8 @@
         return text.replace(/&/g, "&amp;").replace(/</g, "&lt;").replace(/>/g, "&gt;").replace(/"/g, "&quot;").replace(/'/g, "&#039;");
     }
 
-   async function initPage() {
-        // Yarış durumunu önlemek için auth.js'in kontrolü bitirmesini bekle
+    async function initPage() {
+        // auth.js'in veriyi çekmesini sabırla bekle
         let waitCount = 0;
         while (!window.currentUser && waitCount < 15) {
             await new Promise(resolve => setTimeout(resolve, 200));
@@ -763,6 +763,7 @@
 
         currentUser = window.currentUser;
         const fullName = currentUser.user_metadata?.full_name || currentUser.email.split('@')[0];
+        
         document.getElementById('sidebarUserName').textContent = fullName;
         document.getElementById('avatarInitial').textContent = fullName.charAt(0).toUpperCase();
         document.getElementById('modalName').textContent = fullName;
