--- a/dashboard.html
+++ b/dashboard.html
@@ -195,9 +195,9 @@
                   <i data-lucide="chevron-down" class="w-4 h-4 transition-transform duration-300 text-slate-400 chevron"></i>
               </button>
               <div id="offerMenu" class="submenu">
-                  <div class="submenu-item group/item"><a href="teklif-yonetimi.html" class="submenu-link">Müşteri Listesi</a><button onclick="window.location.href='teklif-yonetimi.html'" class="quick-action-btn" title="Yeni Müşteri Ekle"><i data-lucide="plus" class="w-3.5 h-3.5"></i></button></div>
-                  <div class="submenu-item group/item"><a href="teklif-yonetimi.html#proposals" class="submenu-link">Teklif Geçmişi</a><button onclick="window.location.href='teklif-yonetimi.html'" class="quick-action-btn" title="Hızlı Teklif Oluştur"><i data-lucide="plus" class="w-3.5 h-3.5"></i></button></div>
-                  <div class="submenu-item group/item"><a href="teklif-yonetimi.html#quick" class="submenu-link">Hızlı Teklif Ver</a></div>
+                  <div class="submenu-item group/item"><a href="#" class="submenu-link">Müşteri Listesi</a><button onclick="window.location.href='teklif-yonetimi.html'" class="quick-action-btn" title="Yeni Müşteri Ekle"><i data-lucide="plus" class="w-3.5 h-3.5"></i></button></div>
+                  <div class="submenu-item group/item"><a href="#" class="submenu-link">Teklif Geçmişi</a><button onclick="window.location.href='teklif-yonetimi.html'" class="quick-action-btn" title="Hızlı Teklif Oluştur"><i data-lucide="plus" class="w-3.5 h-3.5"></i></button></div>
+                  <div class="submenu-item group/item"><a href="#" class="submenu-link">Hızlı Teklif Ver</a></div>
               </div>
           </div>
 
