--- a/master/index.html
+++ b/master/index.html
@@ -4,7 +4,42 @@
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1.0">
 <title>Ceket Üretim & Fiyatlandırma | Optimizi.App</title>
 
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+<script>
+    // 1. TEMA
+    (function(){
+        if(localStorage.getItem('insjack_theme') === 'light') {
+            document.documentElement.classList.remove('dark');
+        }
+    })();
+
+    // 2. IŞIK HIZINDA GÜVENLİK KONTROLÜ (Bekletme ekranı yok, anında şutlar)
+    try {
+        const sessionData = localStorage.getItem('sb-gktvludkrsxnpigydqml-auth-token');
+        if (!sessionData) {
+            window.location.replace('../login.html');
+        }
+    } catch(e) {}
+
+    // 3. ZEHİRLİ VERİ TEMİZLEYİCİ (Uygulamanın çökmesini engeller)
+    try {
+        let sv = JSON.parse(localStorage.getItem('insjack_pro_v3'));
+        if (sv && sv.IT) {
+            let corrupt = false;
+            sv.IT.forEach(it => {
+                if (!it.parts) corrupt = true;
+                else it.parts.forEach(pt => {
+                    if (!pt.matOv || !pt.ov || !pt.calc) corrupt = true;
+                });
+            });
+            if (corrupt) {
+                localStorage.removeItem('insjack_pro_v3');
+                console.log("Bozuk veri temizlendi.");
+            }
+        }
+    } catch(e) {
+        localStorage.removeItem('insjack_pro_v3');
+    }
+</script>
 
 <script src="https://cdn.tailwindcss.com"></script>
 <script src="https://unpkg.com/lucide@latest"></script>
@@ -13,20 +48,6 @@
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800;900&display=swap');
     
-    /* GÜVENLİK YÜKLEME EKRANI STİLİ */
-    #masterAuthLoader {
-        position: fixed; inset: 0; z-index: 999999;
-        background: #0f172a; display: flex; flex-direction: column;
-        align-items: center; justify-content: center; color: white;
-        transition: opacity 0.5s ease, visibility 0.5s ease;
-    }
-    .loader-spinner {
-        border: 4px solid rgba(255, 255, 255, 0.1);
-        border-top: 4px solid #6366f1; border-radius: 50%;
-        width: 40px; height: 40px; animation: spin 1s linear infinite;
-    }
-    @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
-
     /* ORİJİNAL STİLLER */
     :root{--ac:#6366f1;--cy:#06b6d4;--gn:#10b981;--rd:#f43f5e;--am:#f59e0b}
     *{margin:0;padding:0;box-sizing:border-box;font-family:'Plus Jakarta Sans',sans-serif !important}
@@ -84,23 +105,9 @@
     .custom-chk{display:flex;align-items:center;gap:8px;font-size:.8rem;font-weight:600;cursor:pointer;padding:6px}
     .custom-chk input{accent-color:var(--ac);width:16px;height:16px}
 </style>
-
-<script>
-    // 1. TEMA KONTROLÜ
-    (function(){
-        const d = localStorage.getItem('insjack_theme');
-        if(d === 'light') document.documentElement.classList.remove('dark');
-    })();
-</script>
 </head>
 
 <body class="bg-slate-50 dark:bg-slate-950 text-slate-800 dark:text-slate-200 transition-colors duration-300">
-
-<div id="masterAuthLoader">
-    <div class="loader-spinner mb-5"></div>
-    <h2 class="text-2xl font-bold tracking-wide">Sistem Yükleniyor</h2>
-    <p class="text-slate-400 text-sm mt-2">Güvenlik kontrolü yapılıyor, lütfen bekleyin...</p>
-</div>
 
 <div class="fixed inset-0 z-0 pointer-events-none opacity-50 dark:opacity-100 transition-opacity duration-500">
     <div class="absolute top-0 left-0 w-[500px] h-[500px] bg-indigo-500/20 dark:bg-indigo-600/10 rounded-full blur-[100px]"></div>
@@ -393,60 +400,16 @@
 
 <div class="toast-container" id="toastBox"></div>
 
-
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 <script>
-    // 1. ZEHİRLİ VERİ TEMİZLEYİCİ (Sorunu Kökten Çözen Yer)
     try {
-        let sv = JSON.parse(localStorage.getItem('insjack_pro_v3'));
-        if (sv && sv.IT) {
-            let corrupt = false;
-            sv.IT.forEach(it => {
-                if (!it.parts) corrupt = true;
-                else it.parts.forEach(pt => {
-                    if (!pt.matOv || !pt.ov || !pt.calc) corrupt = true;
-                });
-            });
-            if (corrupt) {
-                console.warn("Eski veya uyumsuz veri tespit edildi, motoru kurtarmak için hafıza temizleniyor...");
-                localStorage.removeItem('insjack_pro_v3');
-            }
-        }
-    } catch(e) {
-        localStorage.removeItem('insjack_pro_v3');
-    }
-
-    // 2. GÜVENLİK VE YÜKLEME EKRANI KALDIRICI (Yarış Sorunu Çözüldü)
-    const SUPABASE_URL = 'https://gktvludkrsxnpigydqml.supabase.co';
-    const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImdrdHZsdWRrcnN4bnBpZ3lkcW1sIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzA1NTI5OTQsImV4cCI6MjA4NjEyODk5NH0.GE9KbO7dx_W7BYihAzvJl744R317xEA8Ars98UW-VWo';
-    const masterSupabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
-
-    const removeAuthLoader = () => {
-        const loader = document.getElementById('masterAuthLoader');
-        if (loader) {
-            loader.style.opacity = '0';
-            setTimeout(() => loader.remove(), 500);
-        }
-    };
-
-    masterSupabase.auth.getSession().then(({ data: { session } }) => {
-        if (!session) {
-            window.location.replace('../login.html');
-        } else {
-            removeAuthLoader(); // Oturum varsa kaldır
-        }
-    }).catch(() => {
-        removeAuthLoader(); // Hata olsa bile kaldır ki içeride hapis kalma
-    });
-
-    masterSupabase.auth.onAuthStateChange((event, session) => {
-        if (!session) window.location.replace('../login.html');
-    });
-
-    // 3. GÜVENLİK SİGORTASI (Zaman Ayarlı Bomba)
-    // Eğer internetin zayıfsa veya Supabase yanıt vermezse, en fazla 2.5 saniye sonra o perde YIRTILIP atılır.
-    setTimeout(() => {
-        removeAuthLoader();
-    }, 2500);
+        const SUPABASE_URL = 'https://gktvludkrsxnpigydqml.supabase.co';
+        const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImdrdHZsdWRrcnN4bnBpZ3lkcW1sIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NzA1NTI5OTQsImV4cCI6MjA4NjEyODk5NH0.GE9KbO7dx_W7BYihAzvJl744R317xEA8Ars98UW-VWo';
+        const masterSupabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+        masterSupabase.auth.onAuthStateChange((event, session) => {
+            if (!session) window.location.replace('../login.html');
+        });
+    } catch(e) {}
 </script>
 
 <script src="js/app.js"></script>
