--- a/master/index.html
+++ b/master/index.html
@@ -2,7 +2,7 @@
 <html lang="tr" class="dark">
 <head>
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1.0">
-<title>Ceket Üretim & Fiyatlandırma | Optimizi.App</title>
+<title>Ceket Üretim & Fiyatlandırma</title>
 
 <script>
     // 1. TEMA
@@ -412,6 +412,6 @@
     } catch(e) {}
 </script>
 
-<script src="js/app.js"></script>
+<script src="/master/js/app.js"></script>
 </body>
 </html>
